# foldcrumbs

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
engram/: __init__.py  cli.py  config.py  distill.py  install.py  llm.py  mcp_server.py  profile.py  redact.py  schema.py  store.py
engram/hooks/: _common.py  _worker.py  context_monitor.py  post_compact.py  session_end.py  session_start.py
foldcrumbs/: __init__.py  audit.py  cli.py  config.py  distill.py  install.py  llm.py  mcp_server.py  profile.py  schema.py  store.py  surface.py
foldcrumbs/hooks/: _common.py  _state.py  _worker.py  context_monitor.py  post_compact.py  session_end.py  session_start.py
tests/: test_engram.py  test_foldcrumbs.py  test_mcp.py
